// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render _override props 1`] = `
<div>
  <div
    class="components-component test-component css-yi1hlk-View emotion-0"
    data-wp-c16t="true"
    data-wp-component="Component"
  >
    Code is Poetry
  </div>
</div>
`;

exports[`props should render context props 1`] = `
<div>
  <div
    class="components-component css-yi1hlk-View emotion-0"
    data-wp-c16t="true"
    data-wp-component="Component"
  >
    Code is Poetry
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div>
  <div
    class="components-component css-yi1hlk-View emotion-0"
    data-wp-c16t="true"
    data-wp-component="Component"
  />
</div>
`;
